# cookiecutter-djl-pypkg

./: .gitignore  LICENSE  README.rst  cookiecutter.json
env/: environment.yaml  requirements.txt
envs/: environment.yaml  requirements.txt
{{cookiecutter.package_name}}/: .coveragerc  .hgignore  LICENSE  README.rst  readthedocs.yml  setup.cfg  setup.py
{{cookiecutter.package_name}}/docs/: conf.py  index.rst  pkg_development.rst
{{cookiecutter.package_name}}/docs/_templates/: layout.html
{{cookiecutter.package_name}}/env/: environment-dev.yaml  requirements.txt
{{cookiecutter.package_name}}/envs/: environment-dev.yaml  environment-rtd.yaml  requirements.txt
{{cookiecutter.package_name}}/tests/: test_{{cookiecutter.package_slug}}.py
{{cookiecutter.package_name}}/{{cookiecutter.package_slug}}/: __init__.py
