; Copyright {{ cookiecutter.project_creation_year }}, {{ cookiecutter.full_name }}
;
; Licensed under the Apache License, Version 2.0 (the "License");
; you may not use this file except in compliance with the License.
; You may obtain a copy of the License at
;
;    https://www.apache.org/licenses/LICENSE-2.0
;
; Unless required by applicable law or agreed to in writing, software
; distributed under the License is distributed on an "AS IS" BASIS,
; WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
; See the License for the specific language governing permissions and
; limitations under the License.

[metadata]
name = {{ cookiecutter.package_name }}
version = attr: {{ cookiecutter.package_slug }}.__version__
description = {{ cookiecutter.project_short_description }}
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
url = https://bitbucket.org/{{ cookiecutter.bitbucket_username }}/{{ cookiecutter.bitbucket_repo_name }}/
long_description = file: README.rst
license = Apache License, Version 2.0
platform = Linux
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3
    Programming Language :: Python :: {{ cookiecutter.min_python_version }}
    Programming Language :: Python :: {{ cookiecutter.dev_python_version }}
    Operating System :: POSIX :: Linux
    Operating System :: Unix

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >={{ cookiecutter.min_python_version }}
install_requires =
    ; see envs/environment-dev.yaml for conda environment dev installation
    ; see envs/requirements.txt for versions most recently used in development
